# kiosk_pbc

kiosk_module/: ._research.md  .env  .env.example  README.md  gui_main.py  kiosk_module.spec  main.py  pyproject.toml  research.md  test_null_modem.py  test_person_buttons.py
kiosk_module/kiosk_module/: ._light_scheduler.py  __init__.py  background_browser.py  config.py  device_controller.py  kiosk_background.py  kiosk_events.py  kiosk_runner.py  kiosk_ws.py  light_scheduler.py  person_detected_audio.py  protocol.py  serial_manager.py  status_monitor.py  volume_serial_controller.py  ws_bridge.py
kiosk_module/tests/: test_protocol.py
